# graphql-training

./: README.md  compose.yaml  pyproject.toml
src/: main.py  turorial.py
src/config/: database.py
src/models/: __init__.py  user.py
src/routes/: user.py
src/type/: user.py
